--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=
 NEXT_PUBLIC_CLERK_SIGN_IN_FORCE_REDIRECT_URL=
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=
+
+# CONVEX
+CONVEX_DEPLOYMENT=
+NEXT_PUBLIC_CONVEX_URL=
