#11 Upload Thing Feature, In-Built Notification System

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.10.6",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-visually-hidden": "^1.1.1",
+    "@uploadthing/react": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
@@ -23,7 +25,8 @@
     "react-dom": "^19.0.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
