--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=
 # CONVEX
 CONVEX_DEPLOYMENT=
 NEXT_PUBLIC_CONVEX_URL=
+
+# UPLOAD THING
+UPLOADTHING_TOKEN=
